# dissertation

corpus/: Cargo.toml  H_fractal.ipynb  H_frontier.ipynb  adj_matrix.ipynb  all_fields.ipynb  attention_space.ipynb  citation.ipynb  citation_cat_field_area.ipynb  citation_date.ipynb  citation_deg_dist.ipynb  citation_descriptive_stats.ipynb  citation_ergm.ipynb  citation_generations.ipynb  citation_graphs.ipynb  citation_temporal.ipynb  co_citation_deg_dist.ipynb  co_citation_desc_stats.ipynb  co_citation_ergm.ipynb  co_citation_hier_comm.ipynb  co_citation_louvain_comm.ipynb  co_citation_node_distance_dist.ipynb  co_citation_temporal.ipynb  co_occurence_deg_dist.ipynb  co_occurrence_communities.ipynb  co_occurrence_desc_stats.ipynb  co_occurrence_hier_comm.ipynb  co_occurrence_louvain_comm.ipynb  co_occurrence_node_distance_dist.ipynb  community_comparison.ipynb  community_semantics.ipynb  constants.py  descriptive.ipynb  ergm_table.ipynb  link_clustering.ipynb  model_init.ipynb  num_communities.ipynb  structure_comparison.ipynb  svd.ipynb
corpus/.ipynb_checkpoints/: co_citation_temporal-checkpoint.ipynb  co_occurrence_hier_comm-checkpoint.ipynb
corpus/GraphModels/: R_ergm.ipynb  bassugm.ipynb  ermg.ipynb  model.tex  sergm.ipynb  sugm.ipynb
corpus/extra/: gnn.ipynb  organizations.ipynb  structure.ipynb
corpus/latex/: .sublime-project  dissertation.aux  dissertation.bbl  dissertation.bcf  dissertation.blg  dissertation.fdb_latexmk  dissertation.fls  dissertation.lof  dissertation.lot  dissertation.run.xml  dissertation.tex  dissertation.toc  slides.aux  slides.bbl  (+7 more)
(+2378 files in other folders)
