[package]
name = "corpus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.24.3", features = ["dtype-full", "object", "lazy", "strings", "concat_str", "list", "parquet", "is_in"] }
tokio = { version = "1", features = ["full"] }
csv = "1.1.6"
serde = { version = "1.0.144", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
regex = "1.6.0"
tokenizers = "0.13.0"
serde_json = "1.0"
itertools = "0.10.5"

charabia = "0.6.0"
rust-stemmers = "1.2.0"
fst = "0.4.7"
